# nexus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  README.md  alembic.ini  pyproject.toml  requirements.txt  run_service.sh  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a6701545d154_initial_schema.py
config/: nexus_intelligence.yaml
docs/: metrics_reference.md
docs/architecture/: SHARED_INFRASTRUCTURE.md
legal/licenses/: COMMERCIAL-LICENSE.txt
scripts/: export_public.sh  seed_knowledge.py
src/nexus/: __init__.py  licensing.py  platform.py  service.py
tests/: conftest.py  test_agent_orchestration.py  test_blueprint_execution.py  test_cost_tracking.py  test_enhanced_api.py  test_memory_management.py  test_orchestration.py  test_rag_pipeline.py
tests/unit/: test_api_entrypoint.py  test_arclane_collector.py  test_async_bridge_actions.py  test_async_bridge_ensemble.py  test_autonomous_research_agent.py  test_autonomy.py  test_cli_main.py  test_cog_eng_config.py  test_cog_eng_imports.py  test_cog_eng_llm_client.py  test_coo_executor_codegen.py  test_coo_executor_decision_agent.py  test_coo_executor_ensemble.py  test_coo_executor_execution_status.py  test_coo_executor_lazy_init.py  test_coo_executor_research.py  test_data.py  test_database_connection.py  test_dynamic_learner_persistence.py  test_engineer_expert.py  test_enhanced_api_entrypoint.py  test_ensemble_imports.py  test_expert_base.py  test_expert_error_handling.py  test_experts_consensus.py  test_intelligence_facade.py  test_kh_graph_collector.py  test_knowledge_base_hardening.py  test_legacy_entrypoints.py  test_licensing.py  test_llm_gateway.py  test_model_profiles.py  test_offline.py  test_platform_query.py  test_pypi_collector.py  test_rate_limit.py  test_request_validation.py  test_resilience_integration.py  (+14 more)
(+182 files in other folders)
