[project]
name = "nexus-ai"
version = "1.0.0"
description = "Advanced AI Ensemble, Orchestrator & Consciousness Framework"
authors = [
  { name = "Christopher R. Arsenault", email = "chris@gozerai.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "aiohttp>=3.9.0",
    "anthropic>=0.7.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/GozerAI/nexus"

[project.scripts]
nexus-cli = "nexus.cli.main:cli"
nexus-chat = "nexus.cli.chat:main"
nexus-api = "nexus.api.api:main"
nexus-gui = "nexus.gui:run"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov>=5.0.0", "ruff", "mypy", "python-dotenv", "aiohttp", "flask", "tenacity", "prometheus-client", "pypdf", "sqlalchemy", "python-docx", "pandas", "datasets"]
server = ["fastapi", "uvicorn[standard]", "pydantic", "requests"]
mcp = ["mcp>=1.0.0"]
embeddings = ["sentence-transformers>=2.2.0"]
gui = ["PySide6>=6.5.0"]
full = ["PySide6>=6.5.0", "sentence-transformers>=2.2.0"]
# Redis vector search
redis = ["redis>=5.0.0"]
# Full with Redis
full-redis = ["PySide6>=6.5.0", "sentence-transformers>=2.2.0", "redis>=5.0.0"]
# ChromaDB requires onnxruntime - install separately if needed
chroma = ["chromadb>=0.4.13"]
telemetry = ["gozerai-telemetry @ git+https://github.com/GozerAI/gozerai-telemetry.git"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
